--- a/tablet/src/index.css
+++ b/tablet/src/index.css
@@ -1,8 +1,11 @@
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@100;200;300;400;500;600;700;800&display=swap');
+
 :root {
-  font-family: Inter, Avenir, Helvetica, Arial, sans-serif;
+  font-family: 'Montserrat', sans-serif, Avenir, Helvetica, Arial;
   font-size: 16px;
-  line-height: 24px;
   font-weight: 400;
+  margin: 0;
+  padding: 0;
 
   color: rgba(255, 255, 255, 0.87);
   background-color: #242424;
@@ -23,4 +26,15 @@
   --color-7: #374151;
   --color-8: #1f2937;
   --color-9: #111827;
+
+  overflow: hidden;
+  width: 100vw;
+  height: 100vh;
+}
+
+a,
+a:visited,
+a:hover,
+a:active {
+  text-decoration: none;
 }
